--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,4 +13,5 @@ add_library(api OBJECT api.cpp)
 link_libraries(api)
 
 add_executable(client client/client_randomio.cpp)
+add_executable(client_Pietro client/client_Pietro.cpp)
 add_subdirectory(server)
